--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,4 @@
-certifi==2016.2.28
-click==6.7
-Flask==1.0
-gunicorn==19.5.0
-itsdangerous==0.24
-Jinja2==2.11.3
-MarkupSafe==1.0
-numpy==1.13.1
-olefile==0.44
-PasteDeploy==1.5.2
-Pillow==8.1.1
-requests==2.20.0
-Werkzeug==0.15.3
+flask
+requests
+numpy
+Pillow
